fix recording problems on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,8 +13,8 @@ html, body {
   width: 100%;
   height: 100%;
 
-  * {
-    touch-action: none;
+  canvas {
+    // touch-action: none;
   }
 }
 
@@ -68,7 +68,7 @@ html, body {
     .close-btn {
       content: " ✕ ";
       color: white;
-      width: 10%;
+      width: 17%;
       position: absolute;
       right: 0px;
       height: 100%;
@@ -99,7 +99,7 @@ html, body {
 #settingsModal {
   .touch-container {
     width: 200px;
-    height: 100px;
+    height: 200px;
     margin: 0 auto;
     margin-bottom: 10px;
     
@@ -107,12 +107,12 @@ html, body {
       &:after {
         content: " ✕ ";
         width: 200px;
-        min-height: 100px;
+        min-height: 200px;
         background-color: #08080896;
         position: absolute;
         left: calc(50% - 100px);
         text-align: center;
-        font-size: 63px;
+        font-size: 123px;
         color: white;
         cursor: pointer;
       }
